# SHUpdtp

./: .env.example  .gitignore  Cargo.toml  README.md  action.yml  auth.toml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: rust.yml
crates/server-core/: Cargo.toml  README.md
crates/server-core/src/: cli_args.rs  encryption.rs  lib.rs
crates/server-core/src/database/: pool.rs
crates/server-core/src/utils/: mod.rs  time.rs
crates/shupdtp-db/: Cargo.toml  README.md
crates/shupdtp-db/src/: lib.rs  schema.rs
crates/shupdtp-db/src/user/: mod.rs  models.rs  operations.rs
crates/shupdtp-db/tests/: user.rs
data/test_cases/1/: info  spj_src.c
data/test_cases/2/: 3.in  info
docker-compose/: judge-server.yml
document/: Authentication.md  RUN.md
document/API/: IMPORTANT.md  Problems.md  Samples.md  Users.md
examples/: send_judge_request.rs
src/: cli_args.rs  errors.rs  main.rs  schema.rs  statics.rs  utils.rs
src/auth/: mod.rs  region.rs
src/controllers/: mod.rs
src/controllers/contests/: handler.rs  mod.rs
src/controllers/judge_servers/: handler.rs  mod.rs
src/controllers/problem_sets/: handler.rs  mod.rs
src/controllers/problems/: handler.rs  mod.rs
src/controllers/regions/: handler.rs  mod.rs
src/controllers/samples/: handler.rs  mod.rs
src/controllers/submissions/: handler.rs  mod.rs
src/controllers/users/: handler.rs  mod.rs
src/database/: mod.rs  pool.rs
src/judge_actor/: handler.rs  mod.rs  utils.rs
src/judge_actor/statistics/: common_region.rs  mod.rs  rank.rs
src/models/: access_control_list.rs  contests.rs  judge_servers.rs  languages.rs  mod.rs  problem_sets.rs  problems.rs  ranks.rs  region_access_settings.rs  region_links.rs  regions.rs  samples.rs  statistics.rs  submissions.rs  users.rs  utils.rs
src/services/: mod.rs
src/services/contest/: mod.rs  utils.rs
src/services/judge_server/: heartbeat.rs  info.rs  mod.rs
src/services/problem/: mod.rs  utils.rs
src/services/problem_set/: mod.rs
src/services/rank/: utils.rs
src/services/region/: mod.rs  utils.rs
src/services/sample/: mod.rs
src/services/submission/: mod.rs
src/services/user/: mod.rs  utils.rs
