[package]
name = "shupdtp-db"
version = "0.1.0"
authors = ["slhmy <1484836413@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server-core = { path = "../server-core" }
# ORM and Query Builder
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "chrono", "r2d2"] }

# Framework for serializing and deserializing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

dotenv = "0.15"